--- a/index.html
+++ b/index.html
@@ -7,6 +7,51 @@
     <title>GifOS</title>
 </head>
 <body>
+    <header>
+        <div class="topbar">
+            <p>¡Bienvenidos/as a Guifos.com! ——————Donde los gifs están.////// Número de visitas: 12.765.803</p>
+        </div>
+        <nav>
+            <a href="/"><img src="./assets/logo.jpg" alt="Logo GifOS"></a>
+            <ul class="menu">
+                <li><a href="#">Crear Guifos</a></li>
+                <li><a href="#">Elegir tema</a></li>
+                <li><a href="#">Mis Guifos</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="search-container">
+        <p>Buscar</p>
+        <form action="">
+            <input type="text" placeholder="Busca gifs, hashtags, temas, busca lo que quieras…">
+
+        </form>
+    </div>
+    <section id="suggest">
+        <h2>Hoy te sugerimos:</h2>
+        <div id="suggest-container">
+            <div class="suggest-container-gifbox">
+                <p></p>
+                <div class="suggest-gifbox-img"><a href="">Ver más...</a></div>
+            </div>
+            <div class="suggest-container-gifbox">
+                <p></p>
+                <div class="suggest-gifbox-img"><a href="">Ver más...</a></div>
+            </div>
+            <div class="suggest-container-gifbox">
+                <p></p>
+                <div class="suggest-gifbox-img"><a href="">Ver más...</a></div>
+            </div>
+            <div class="suggest-container-gifbox">
+                <p></p>
+                <div class="suggest-gifbox-img"><a href="">Ver más...</a></div>
+            </div>
+        </div>
+    </section>
+    <section id="trends">
+        <h2>Tendencias:</h2>
+
+    </section>
     
 </body>
 </html>
