Header and search

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p>¡Bienvenidos/as a Guifos.com! ——————Donde los gifs están.////// Número de visitas: 12.765.803</p>
         </div>
         <nav>
-            <a href="/"><img src="./assets/logo.jpg" alt="Logo GifOS"></a>
+            <a href="/"><img src="./assets/gifOF_logo.png" alt="Logo GifOS"></a>
             <ul class="menu">
                 <li><a href="#">Crear Guifos</a></li>
                 <li><a href="#">Elegir tema</a></li>
@@ -24,11 +24,11 @@
         <p>Buscar</p>
         <form action="">
             <input type="text" placeholder="Busca gifs, hashtags, temas, busca lo que quieras…">
-
+            <button>&#x1F50E; Buscar</button>
         </form>
     </div>
-    <section id="suggest">
-        <h2>Hoy te sugerimos:</h2>
+    <section id="suggest" class="suggest">
+        <p class="sub-title">Hoy te sugerimos:</p>
         <div id="suggest-container">
             <div class="suggest-container-gifbox">
                 <p></p>
